fixed more alignment issues on index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -76,10 +76,6 @@ blockquote p {
   text-align: center;
 }
 
-.clearfix {
-  overflow: auto;
-}
-
 .modal-title {
   padding-left: 10px;
 }
